...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_dashboard_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
...
                    <!-- Profile image -->
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/adminProfileImage"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
...
                    <!-- Name -->
                    <TextView
                        android:id="@+id/adminNameText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...
                        android:textColor="#212121"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toTopOf="@id/adminRoleText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/adminProfileImage"
...

                        <TextView
                            android:id="@+id/totalAppointmentsText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/totalRevenueText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/totalStaffText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/totalCustomersText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                        <!-- View all button -->
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/viewFullScheduleButton"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
...
                    <!-- Staff Schedule RecyclerView -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/staffScheduleRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                    <!-- Revenue Chart Container -->
                    <FrameLayout
                        android:id="@+id/revenueChartContainer"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
...

                            <TextView
                                android:id="@+id/todayRevenueText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/yesterdayRevenueText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...

                            <TextView
                                android:id="@+id/revenueChangeText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
